COMPLETED THE SECOND PROJECT OF MARGIN AND PADDING
In margin and padding repo , I completed my second project

--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -7,21 +7,37 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 1px;
 }
 
 .title {
   background: #e3f4ff;
+  margin: 10px;
+  padding: 10px;
 }
 
 .content {
   background: #e3f4ff;
+  display: block;
+  margin: 10px;
+  padding: 10px;
 }
 
 .button-container {
   background: #e3f4ff;
+  display: block;
+  margin: 10px;
+  text-align: center;
+  text-justify: center;
+  height: 50px;
+  padding: 10px;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  width: 150px;
+  margin:  0 auto;
+  height: 40px;
 }
