--- a/flex/01-flex-center/style.css
+++ b/flex/01-flex-center/style.css
@@ -3,6 +3,9 @@
   border: 4px solid midnightblue;
   width: 400px;
   height: 300px;
+  display: flex;
+  justify-content: center;
+  /* 1 */align-items: center;
 }
 
 .box {
@@ -12,4 +15,6 @@
   border: 6px solid maroon;
   width: 80px;
   height: 80px;
+  /* Note that this could also be used besides the first */
+  /* align-self: center; */
 }
