--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -2,6 +2,10 @@
   font-family: monospace;
   background: papayawhip;
 }
+ .header{
+  display: flex;
+  justify-content: space-between;
+ }
 
 .logo {
   font-size: 48px;
@@ -9,11 +13,21 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  align-self: center;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  gap: 10px;
+  
+}
+
+li {
+  background: papayawhip;
 }
 
 a {
@@ -23,3 +37,4 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+
